# mood

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  install-mcp.sh  mood.py  pyproject.toml  run.sh
